[project]
name = "p25-hackathon2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin Desombre", email = "martin.desombre1@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "pygame>=2.6.1",
]

[project.scripts]
p25-hackathon2 = "p25_hackathon2:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
